# kimm_object_estimation

./: CMakeLists.txt  README.md  package.xml
include/kalman/main/: extendedkalman.hpp
include/kalman/objdyn/: object_dynamics.hpp
include/kimm_object_estimation/main/: extendedkalman.hpp
launch/: ekf_test.launch  kalman_test.launch
src/main/: extendedkalman.cpp  kalman.cpp
src/objdyn/: object_dynamics.cpp
src/test/: ekf-test.cpp  kalman-test.cpp
