<?xml version="1.0"?>
<package format="2">
  <name>kimm_object_estimation</name>
  <version>0.0.1</version>
  <description>The kimm_object_estimation package</description>

  <maintainer email="jspark2090@kimm.re.kr">Jinseong Park</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>eigen</build_depend>
 
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
